[package]
name = "es-forcemerge-io-throttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = [ "cdylib" ]

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
ioprio = "0.2.0"
# jvmti = "0.5.0"
jvmti = { path = "../jvmti-rust/jvmti" }
lazy_static = "1.4.0"
libc = "0.2.142"
regex = "1.8.1"
